# lgr_rocket-api_project

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20250128012108_setup.down.sql  20250128012114_setup.up.sql
src/: cors.rs  main.rs  models.rs
src/handlers/: handlers_inner.rs  mod.rs
src/persistance/: answers_dao.rs  questions_dao.rs  tests.rs
