[package]
name = "stackoverflow_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
dotenvy = "0.15.7"
log = "0.4.25"
pretty_env_logger = "0.5.0"
async-trait = "0.1.85"
thiserror = "2.0.11"